데이터 격자 형태로
한 행에 4개씩 선택하면 오른쪽 팝업 형태로